--- a/task3.html
+++ b/task3.html
@@ -12,30 +12,41 @@
 <body>
     <!-- Nav Bar -->
     <header class=" header">
-        <div class="logo">
-            <img src="./img/cloud_logo.png" alt="A cloud Logo">
-            Green
-        </div>
-        <!-- Main Menu -->
-        <div class="menu">
-            <a href="" class="home">HOME</a>
-            <a href="">ABOUT</a>
-            <a href="">PRODUCTS</a>
-            <a href="">SERVICES</a>
-            <a href="">FAQS</a>
-            <a href="">CONTACTS</a>
-        </div>
+            <div class="logo">
+                <img src="./img/cloud_logo.png" alt="A cloud Logo">
+                Green
+            </div>
+            <!-- Main Menu -->
+            <div class="menu">
+                <a href="" class="home">HOME</a>
+                <a href="">ABOUT</a>
+                <a href="">PRODUCTS</a>
+                <a href="">SERVICES</a>
+                <a href="">FAQS</a>
+                <a href="">CONTACTS</a>
+            </div>
     </header>
     <!-- Main section -->
     <section class="main">
         <div>
             <h1 class="heading">FRESH IDEAS</h1>
-            <p class="heading" style="font-size:7px;">FOR GROWING YOUR BUSINESS</p>
-            <button>READ MORE</button>
-            <button>IDEAS</button>
+            <p class="heading" style="font-size:7;">FOR GROWING YOUR BUSINESS</p>
+            <button class="btn1">READ MORE</button>
+            <button class="btn2">REGISTER</button>
         </div>
     </section>
-
+    <!-- content section -->
+    <section>
+        <div>
+            <h2>Research</h2>
+        </div>
+        <div>
+            <h2>Planning</h2>
+        </div>
+        <div>
+            <h2>Support</h2>
+        </div>
+    </section>
 </body>
 
 </html>
