--- a/task3.html
+++ b/task3.html
@@ -30,7 +30,7 @@
     <section class="main">
         <div>
             <h1 class="heading">FRESH IDEAS</h1>
-            <p class="heading" style="font-size:7;">FOR GROWING YOUR BUSINESS</p>
+            <p class="heading" style="font-size: 7px;">FOR GROWING YOUR BUSINESS</p>
             <button class="btn1">READ MORE</button>
             <button class="btn2">REGISTER</button>
         </div>
